changed UI button

--- a/app/assets/stylesheets/spree/frontend/application.scss
+++ b/app/assets/stylesheets/spree/frontend/application.scss
@@ -1,3 +1,4 @@
+@import "custom";
 @import "spree/frontend/variables/variables";
 @import "spree/frontend/variables/bootstrap-overrides";
 @import "spree/frontend/variables/helper-variables";
