--- a/app/views/spree/admin/products/_form.html.erb
+++ b/app/views/spree/admin/products/_form.html.erb
@@ -81,6 +81,8 @@
         <%= f.field_container :master_sku, class: ['form-group'] do %>
           <%= f.label :master_sku, Spree.t(:master_sku) %>
           <%= f.text_field :sku, size: 16, class: 'form-control' %>
+          <%= f.hidden_field :id, value: @product.id %>
+          <%= f.hidden_field :store, value: Spree::Store.last&.name %>
         <% end %>
       </div>
 
